Closed Bug 1592792 Opened 5 years ago Closed 4 years ago

mingw's version of wincrypt.h doesn't define the flag CERT_CHAIN_DISABLE_AIA

Categories

(Firefox Build System :: General: Unsupported Platforms, defect)

defect
Not set
normal

Tracking

(firefox73 fixed)

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: keeler, Assigned: tjr)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In bug 1591691 we need the flag CERT_CHAIN_DISABLE_AIA (provided in Windows by wincrypt.h). Evidently mingw's version of wincrypt.h doesn't have it: https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-headers/include/wincrypt.h

Blocks: mingw-clang
Component: Toolchains → General: Unsupported Platforms

Fixed in mingw-w64 git.

Assignee: nobody → tom
Pushed by tritter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c80cda3ce56
Remove MinGW conditional for CERT_CHAIN_DISABLE_AIA r=keeler
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: