Bug 1592792 - Remove MinGW conditional for CERT_CHAIN_DISABLE_AIA r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D55997