security/manager/ssl/EnterpriseRoots.cpp
@@ -96,12 +96,7 @@ static void CertIsTrustAnchorForTLSServerAuth(PCCERT_CONTEXT certificate,
   DWORD flags = CERT_CHAIN_REVOCATION_CHECK_CACHE_ONLY |
                 CERT_CHAIN_CACHE_ONLY_URL_RETRIEVAL |
                 CERT_CHAIN_DISABLE_AUTH_ROOT_AUTO_UPDATE |
-// mingw's version of wincrypt.h doesn't define this flag (bug 1592792).
-#  if defined(CERT_CHAIN_DISABLE_AIA)
                 CERT_CHAIN_DISABLE_AIA;
-#  else
-                0x00002000;
-#  endif
   if (!CertGetCertificateChain(nullptr, certificate, nullptr, nullptr,
                                &chainPara, flags, nullptr, &pChainContext)) {
     MOZ_LOG(gPIPNSSLog, LogLevel::Debug, ("CertGetCertificateChain failed"));
